# Task-Worker

./: CMakeLists.txt
include/: ObliviousMapper.h  SCIHarness.h  SecureAggregation.h  Sort.h  TaskUtil.h  TaskqHandler.h
src/: ObliviousMapper.cpp  SCIHarness.cpp  SecureAggregation.cpp  Sort.cpp  Task.cpp  TaskqHandler.cpp  TroyFHEUtil.cu.backup
test/: 2PC_test.cpp  client_test.cpp  fed_gcn.cpp  fhe_wrapper_test.cpp  graphsc_test.cpp  plaintext_gcn.cpp  plaintext_gcn_small.cpp  server_test.cpp  task_test.cpp  test.cpp  torch_gcn.py  torch_gcn_cmp.py
test/GraphAnalysis/: graph_analyzer.cpp  graph_analyzer.h  graph_common.h
